<resources>
    <string name="app_name">Flores De Jardin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--Basic String-->
    <string name="btn">Button</string>
    <string name="img">Image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="okay">Okay</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="confirmation_alert">Confirmation Alert</string>
    <string name="confirmation_msg">Do you want to add this product in cart?</string>
    <string name="subtotal">Product Price</string>

    <!--Login-->
    <string name="dil">DRUG International Limited</string>
    <string name="user_name">User Name</string>
    <string name="user_mail">User Mail</string>
    <string name="address">Address</string>
    <string name="phone">Phone No</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>

</resources>