<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fannana.fahreen.floresdejardin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_flower_list"
        android:name="fannana.fahreen.floresdejardin.ui.flower_list.FlowerListFragment"
        tools:layout="@layout/fragment_list_of_products"
        />

    <fragment
        android:id="@+id/nav_plant_list"
        android:name="fannana.fahreen.floresdejardin.ui.plant_list.PlantListFragment"
        tools:layout="@layout/fragment_list_of_products" />

    <fragment
        android:id="@+id/nav_flowerjuice_list"
        android:name="fannana.fahreen.floresdejardin.ui.flower_juice_list.FlowerJuiceListFragment"
        tools:layout="@layout/fragment_list_of_products" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="fannana.fahreen.floresdejardin.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="fannana.fahreen.floresdejardin.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>