<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_dialog_title_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:background="@color/primary_colour"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_weight=".8"
            android:gravity="start|center"
            android:text="Change Password"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:src="@mipmap/ic_close"
            app:tint="@color/white"
            android:contentDescription="@string/btn" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_pass_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Old Password"
        android:padding="5dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textWebPassword"
            android:maxLength="12"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="New Password"
        android:padding="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textWebPassword"
            android:maxLength="12"
            android:textSize="16sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_new_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="Confirm New Password"
        android:padding="5dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textWebPassword"
            android:maxLength="12"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>



    <!-- Settings -->
    <LinearLayout
        android:id="@+id/layouts_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:visibility="visible"
            android:textColor="@color/primary_text_colour"
            android:textSize="16sp"
            android:text="Please set your Old Password first to enable New Password and Confirm Password option."
            />-->


        <LinearLayout
            android:id="@+id/layout_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="15dp"
                android:layout_weight=".1"
                android:background="@drawable/surface_circle"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_margin="15dp"
                android:layout_weight=".1"
                android:background="@drawable/surface_circle"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>